ing.yaml
#! https://ruleoftech.com/2020/using-nginx-ingress-controller-on-google-kubernetes-engine
#! https://medium.com/bluekiri/deploy-a-nginx-ingress-and-a-certitificate-manager-controller-on-gke-using-helm-3-8e2802b979ec
#! kubectl create deployment hello-app --image=gcr.io/google-samples/hello-app:1.0 -n nginx
#! kubectl expose deployment hello-app --port 8080 --target-port 8080 -n nginx


apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-nginx-prod
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: helloworld.k8s-tanzu-ak.com
    http:
      paths:
      - path: /helloworld
        backend:
          serviceName: hello-app
          servicePort: 8080
  tls:
    - hosts:
      - helloworld.k8s-tanzu-ak.com
      secretName: helloworld-cert-manager-ctls
